--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,4 +32,13 @@
     </div>
 
   </div>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X9K4W4KFBV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-X9K4W4KFBV');
+  </script>
 </footer>
