--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/png" sizes="256x256" href="/favicon.png">
     {%- seo -%}
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+    <link rel="stylesheet" href="/css/addon.css"/>
     {%- feed_meta -%}
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
