--- a/css/addon.css
+++ b/css/addon.css
@@ -6,3 +6,30 @@
 .post-link:hover .post-thumb-img {
     filter: brightness(.75);
 }
+
+.dl-button {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: none !important;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    border: 1px solid #0d6efd;
+    padding: .375rem .75rem;
+    font-size: 1.3rem;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    color: #fff !important;
+    background-color: #0d6efd;
+    text-transform: none;
+}
+
+.dl-button:hover {
+    color: #fff;
+    background-color: #0b5ed7;
+    border-color: #0a58ca;
+}
