add more streaming and download options to hc40

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
   <div class="wrapper">
 
     <h2 class="footer-heading">{{ site.title | escape }}</h2>
+    <a href="/files/HBz.Home.Clubbing.Season.3.S03.1080p.x264-USN123.torrent">Torrent Download</a>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
@@ -11,8 +12,6 @@
           <li class="p-name">
             {%- if site.author -%}
             {{ site.author | escape }}
-            {%- else -%}
-            {{ site.title | escape }}
             {%- endif -%}
           </li>
           {%- if site.email -%}
