add hidden link to sitemap

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,4 +40,5 @@
 
     gtag('config', 'G-X9K4W4KFBV');
   </script>
+  <link style="display: none; width: 0; height: 0; visibility: hidden; pointer-events: none" href="/sitemap.xml"/>
 </footer>
