--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" sizes="256x256" href="/favicon.png">
     <meta name="keywords" content="hbz, home clubbing, home, clubbing, musik, stream, archiv, download">
+    <meta name="robots" content="index, follow">
     {%- seo -%}
-    <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
     <link rel="stylesheet" href="/css/addon.css"/>
     {%- feed_meta -%}
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
